--- a/src/main/resources/static/css/scss/pages/admin/_itemDtl.scss
+++ b/src/main/resources/static/css/scss/pages/admin/_itemDtl.scss
@@ -117,8 +117,8 @@
                         font-size: 12px;
                     }
 
-                    select.cate1,
-                    select.cate2 {
+                    select.parent_cate,
+                    select.child_cate {
                         width: calc(50% - 2px);
                     }
 
@@ -147,10 +147,6 @@
             text-align: center;
             display: block;
             margin-top: 30px;
-
-            // .test_btn {
-            //     border: 1px solid red;
-            // }
         }
     }
 
