--- a/src/main/resources/static/css/scss/pages/admin/_itemForm.scss
+++ b/src/main/resources/static/css/scss/pages/admin/_itemForm.scss
@@ -117,8 +117,8 @@
                         font-size: 12px;
                     }
 
-                    select.cate1,
-                    select.cate2 {
+                    select.parent_cate,
+                    select.child_cate {
                         width: calc(50% - 2px);
                     }
 
