--- a/src/main/resources/templates/admin/item/itemDtl.html
+++ b/src/main/resources/templates/admin/item/itemDtl.html
@@ -45,12 +45,13 @@
                                         <label for="parent_cate_id">카테고리 <span>*</span></label>
                                     </th>
                                     <td>
-                                        <select name="parent_cate_id" id="parent_cate_id" class="cate1" disabled="disabled">
-                                            <option selected value="none">선택</option>
+                                        <select name="parent_cate_id" id="parent_cate_id" class="parent_cate" disabled>
+                                            <option selected value="0">선택</option>
                                         </select>
-                                        <select name="child_cate_id" id="child_cate_id" class="cate2" disabled="disabled">
-                                            <option selected value="none">선택</option>
+                                        <select th:field="*{categoryId}" class="child_cate" disabled>
+                                            <option selected value="0">선택</option>
                                         </select>
+                                        <span class="text-danger category_warn">카테고리를 선택해주세요.</span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -74,8 +75,8 @@
                                         <label th:for="*{discount}">할인율 <span>*</span></label>
                                     </th>
                                     <td>
-                                        <input class="discount_interface" placeholder="할인율" maxlength="2" th:value="*{discount}" readonly="readonly">
-                                        <input class="discount_input" type="hidden" th:field="*{discount}">
+                                        <input class="discount_interface" placeholder="할인율" maxlength="2" readonly="readonly">
+                                        <input class="discount_input" type="hidden" th:value="*{discount}" th:field="*{discount}">
                                         <span class="discount_text">할인 가격 : <span class="discount_price"></span></span>
                                     </td>
                                 </tr>
@@ -151,105 +152,88 @@
     <!-- custom js -->
     <script th:inline="javascript">
         $(function () {
-            /* 카테고리 추가 */
+            /* 상품 등록 카테고리 */
             $.ajax({
                 url: "/admin/item/categories",
                 type: "GET",
                 success: function (res) {
-                    let jsonData = JSON.parse(res);
+                    let cateList = JSON.parse(res);
 
                     let cate1Arr = [];
                     let cate1Obj = {};
+                    let cate2Arr = [];
+                    let cate2Obj = {};
 
-                    for (let i = 0; i < jsonData.length; i++) {
-                        if (jsonData[i].tier === "1") {
+                    let parentCateSelect = $(".parent_cate");
+                    let childCateSelect = $(".child_cate");
+
+                    for (let i = 0; i < cateList.length; i++) {
+                        if (cateList[i].tier === "1") {
                             cate1Obj = {};
-                            cate1Obj.id = jsonData[i].id;
-                            cate1Obj.name = jsonData[i].name;
+
+                            cate1Obj.id = cateList[i].id;
+                            cate1Obj.name = cateList[i].name;
+                            cate1Obj.parent = cateList[i].parent;
                             cate1Arr.push(cate1Obj);
                         }
                     }
-                    let cate1Select = $("select.cate1");
 
-                    for (let i = 0; i < cate1Arr.length; i++) {
-                        cate1Select.append("<option name='cateParent' value='" + cate1Arr[i].id + "'>" + cate1Arr[i].name + "</option>");
+                    for (let i = 0; i < cateList.length; i++) {
+                        for (let j = 0; j < cateList[i].children.length; j++) {
+                            if (cateList[i].children[j].tier === "2") {
+                                cate2Obj = {};
+
+                                cate2Obj.id = cateList[i].children[j].id;
+                                cate2Obj.name = cateList[i].children[j].name;
+                                cate2Obj.parent = cateList[i].children[j].parent;
+                                cate2Arr.push(cate2Obj);
+                            }
+                        }
                     }
 
-                    cate1Select.on("change", function () {
-                        let cate2Arr = [];
-                        let cate2Obj = {};
+                    for (let i = 0; i < cate1Arr.length; i++) {
+                        parentCateSelect.append("<option value='" + cate1Arr[i].id + "'>" + cate1Arr[i].name + "</option>");
+                    }
 
-                        for (let i = 0; i < jsonData.length; i++) {
-                            for (let j = 0; j < jsonData[i].children.length; j++) {
-                                if (jsonData[i].children[j].tier === "2") {
-                                    cate2Obj = {};
-                                    cate2Obj.id = jsonData[i].children[j].id;
-                                    cate2Obj.name = jsonData[i].children[j].name;
-                                    cate2Obj.parent = jsonData[i].children[j].parent;
-                                    cate2Arr.push(cate2Obj);
-                                }
-                            }
-                        }
-                        let cate2Select = $("select.cate2");
-                        cate2Select.children().remove();
-                        cate2Select.append("<option value=''>선택</option>");
+                    for (let i = 0; i < cate2Arr.length; i++) {
+                        childCateSelect.append("<option value='" + cate2Arr[i].id + "'>" + cate2Arr[i].name + "</option>");
+                    }
 
-                        let selectVal = $(this).find("option:selected").val();
-                        for (let i = 0; i < cate2Arr.length; i++) {
-                            if (selectVal === cate2Arr[i].parent.toString()) {
-                                cate2Select.append("<option name='cateChild' value='" + cate2Arr[i].id + "'>" + cate2Arr[i].name + "</option>");
-                            }
-                        }
-                    });
+                    let categoryId = [[${itemFormDto.categoryId}]];
+
+                    if (categoryId >= 500) {
+                        $('.parent_cate').val('500').prop("selected", true);
+                        $('.child_cate').val(categoryId).prop("selected", true);
+                    } else if (categoryId >= 400) {
+                        $('.parent_cate').val('400').prop("selected",true);
+                    } else if (categoryId >= 300) {
+                        $('.parent_cate').val('300').prop("selected",true);
+                        $('.child_cate').val(categoryId).prop("selected",true);
+                    } else if (categoryId >= 200) {
+                        $('.parent_cate').val('200').prop("selected",true);
+                        $('.child_cate').val(categoryId).prop("selected",true);
+                    } else if (categoryId >= 100) {
+                        $('.parent_cate').val('100').prop("selected",true);
+                        $('.child_cate').val(categoryId).prop("selected",true);
+                    }
                 },
                 error: function (request, status, error) {
                     console.log(error);
                 }
             })
 
-            /* 할인율 설정 */
-            $(".discount_interface").on("propertychange change keyup paste input", function () {
-
-                let userInput = $(".discount_interface");
-                let discountInput = $(".discount_input");
-
-                let discountRate = userInput.val();
-                let sendDiscountRate = discountRate / 100;
-                let itemPrice = $(".price_input").val();
-                let discountPrice = itemPrice * (1 - sendDiscountRate);
-
-                if (!isNaN(discountRate)) {
-                    $(".discount_price").html(discountPrice);
-                    discountInput.val(sendDiscountRate);
-                }
-            });
-
-            /* 할인율 설정 */
-            $(".price_input").on("propertychange change keyup paste input", function () {
-
-                let userInput = $(".discount_interface");
-                let discountInput = $(".discount_input");
-
-                let discountRate = userInput.val();
-                let sendDiscountRate = discountRate / 100;
-                let itemPrice = $(".price_input").val();
-                let discountPrice = itemPrice * (1 - sendDiscountRate);
-
-                if (!isNaN(discountRate)) {
-                    $(".discount_price").html(discountPrice);
-                }
-            });
+            /* 할인율 */
+            let discount = Number([[${discount}]]);
+            $(".discount_interface").val(discount)
 
             let moveForm = $("#move_form");
-
             /* 상품 관리 페이지 이동 버튼 */
             $(".cancel_btn").on("click", function(e){
                 e.preventDefault();
 
-                moveForm.attr("action", "/admin/items/" + [[${criteria.page}]])
+                moveForm.attr("action", "/admin/items/" + [[${pageDto.page}]])
                 moveForm.submit();
             });
-
             /* 상품 수정 페이지 이동 버튼 */
             $(".modify_btn").on("click", function(e){
                 e.preventDefault();
