--- a/src/main/resources/static/css/scss/pages/admin/_itemMng.scss
+++ b/src/main/resources/static/css/scss/pages/admin/_itemMng.scss
@@ -43,6 +43,7 @@
                         padding: 15px 5px 14px;
                         border-top: 1px solid #e5e5e5;
                         color: #353535;
+                        height: 100px;
 
                         a {
                             width: 90px;
@@ -58,6 +59,28 @@
                             outline: none;
                             background: white;
                             border: none;
+                        }
+
+                        .btn_box {
+                            display: flex;
+                            justify-content: center;
+                            flex-direction: column;
+                            align-items: center;
+
+                            button {
+                                font-size: 12px !important;
+                                margin-bottom: 2px;
+                                height: 28px !important;
+                                display: block;
+                            }
+                        }
+
+                        button.item_dtl_btn {
+                            &:hover {
+                                color: rgb(80, 80, 80);
+                                text-decoration: underline;
+
+                            }
                         }
                     }
 
