--- a/src/main/resources/templates/admin/item/itemMng.html
+++ b/src/main/resources/templates/admin/item/itemMng.html
@@ -26,10 +26,11 @@
                                     <thead>
                                         <tr>
                                             <th style="width: 10%;" scope="col">번호</th>
-                                            <th style="width: 30%;" scope="col">상품명</th>
+                                            <th style="width: auto;" scope="col">상품명</th>
                                             <th style="width: 10%;" scope="col">상태</th>
                                             <th style="width: 10%;" scope="col">등록자</th>
-                                            <th style="width: 20%;" scope="col">등록일</th>
+                                            <th style="width: 10%;" scope="col">등록일</th>
+                                            <th style="width: 15%;" scope="col">선택</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -38,12 +39,20 @@
                                                 th:text="${items.getTotalElements() - (items.getSize() * items.getNumber()) - status.index}">
                                             </td>
                                             <td>
-                                                <button class="item_dtl_btn" type="button" th:value="${item.id}" th:text="${item.itemNm}" onclick="moveItemDtlPage(this.value)"></button>
+                                                <button class="item_dtl_btn" type="button" th:value="${item.id}"
+                                                    th:text="${item.itemNm}"
+                                                    onclick="moveItemDtlPage(this.value)"></button>
                                             </td>
                                             <td th:text="${item.itemSellStatus == sellStatus} ? '판매' : '품절'">
                                             </td>
                                             <td th:text="${item.createdBy}"></td>
                                             <td th:text="${#temporals.format(item.regTime, 'yyyy-MM-dd HH:mm:ss')}">
+                                            </td>
+                                            <td>
+                                                <div class="btn_box">
+                                                    <button th:data-id="${item.id}" class="black_btn_w90_h30 modify_btn" type="button">수정</button>
+                                                    <button th:data-id="${item.id}" class="white_btn_w90_h30 delete_btn" type="button">삭제</button>
+                                                </div>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -103,7 +112,8 @@
                                     <input class="search_query" th:field="*{searchQuery}" type="text"
                                         placeholder="검색어를 입력해주세요">
                                     <button class="search_btn black_btn_w90_h40" type="button">검색</button>
-                                    <button class="white_btn_w90_h40 ms-2" type="button" onclick="moveItemEnrollPage()">상품 등록</button>
+                                    <button class="white_btn_w90_h40 ms-2" type="button"
+                                        onclick="moveItemEnrollPage()">상품 등록</button>
                                 </div>
                             </form>
                         </div>
@@ -113,10 +123,13 @@
 
             <form id="move_form" method="get">
                 <input type="hidden" name="page" th:value="${items.number}">
-                <input th:if="${not #strings.isEmpty(itemSearchDto.searchDateType)}" type="hidden" name="searchDateType" th:value="${itemSearchDto.searchDateType}">
-                <input th:if="${#strings.isEmpty(itemSearchDto.searchDateType)}" type="hidden" name="searchDateType" value="all">
+                <input th:if="${not #strings.isEmpty(itemSearchDto.searchDateType)}" type="hidden" name="searchDateType"
+                    th:value="${itemSearchDto.searchDateType}">
+                <input th:if="${#strings.isEmpty(itemSearchDto.searchDateType)}" type="hidden" name="searchDateType"
+                    value="all">
                 <input type="hidden" name="searchSellStatus" th:value="${itemSearchDto.searchSellStatus}">
-                <input th:if="${not #strings.isEmpty(itemSearchDto.searchBy)}" type="hidden" name="searchBy" th:value="${itemSearchDto.searchBy}">
+                <input th:if="${not #strings.isEmpty(itemSearchDto.searchBy)}" type="hidden" name="searchBy"
+                    th:value="${itemSearchDto.searchBy}">
                 <input th:if="${#strings.isEmpty(itemSearchDto.searchBy)}" type="hidden" name="searchBy" value="itemNm">
                 <input type="hidden" name="searchQuery" th:value="${itemSearchDto.searchQuery}">
             </form>
@@ -141,8 +154,8 @@
             });
 
             /* 상품 수정,등록 시 결과 창 출력 */
-            let save_result = [[${save_result}]];
-            let update_result = [[${update_result}]];
+            let save_result = [[${ save_result }]];
+            let update_result = [[${ update_result }]];
             checkResultForSave(save_result);
             checkResultForUpdate(update_result);
 
@@ -186,6 +199,34 @@
         function moveItemEnrollPage() {
             location.href = "/admin/item";
         }
+
+        /* 상품 수정 페이지 이동 버튼 */
+        let moveForm = $("#move_form");
+        $(".modify_btn").on("click", function(e){
+            let itemId = $(this).attr("data-id");
+            e.preventDefault();
+
+            moveForm.attr("action", "/admin/item/" + itemId);
+            moveForm.submit();
+        });
+
+        /* 상품 삭제 버튼 */
+        $(".delete_btn").on("click", function (e) {
+            let itemId = $(this).attr("data-id");
+            e.preventDefault();
+
+            $.ajax({
+                url: "/admin/item/" + itemId,
+                type: "DELETE",
+                success: function (res) {
+                    alert("상품이 삭제되었습니다.");
+                    location.href = "/admin/items";
+                },
+                error: function (request, status, error) {
+                    alert(request.responseText);
+                }
+            })
+        });
 
     </script>
 </body>
