--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -114,7 +114,7 @@
                         <button type="button" class="black_btn_w130_h40" onclick="ordersAllItems()">전체상품주문</button>
                         <button type="button" class="white_btn_w130_h40" onclick="orders()">선택상품주문</button>
                         <span>
-                            <a th:href="@{/}" class="white_btn_w130_h40">쇼핑계속하기</a>
+                            <button type="button" class="white_btn_w130_h40 resume_btn">쇼핑계속하기</button>
                         </span>
                     </div>
                     <div class="user_help">
@@ -337,38 +337,42 @@
         }
 
         function orders() {
-            let paramData = {};
-            let dataList = [];
+            if (confirm("선택하신 상품을 주문하시겠습니까?")) {
+                let paramData = {};
+                let dataList = [];
 
-            $("input[name=cart_check]:checked").each(function () {
-                let cartItemId = $(this).val();
-                dataList.push(cartItemId);
-            });
+                $("input[name=cart_check]:checked").each(function () {
+                    let cartItemId = $(this).val();
+                    dataList.push(cartItemId);
+                });
 
-            paramData["cartItemIds"] = dataList;
+                paramData["cartItemIds"] = dataList;
 
-            let param = JSON.stringify(paramData);
+                let param = JSON.stringify(paramData);
 
-            $.ajax({
-                url: "/cart/orders",
-                type: "POST",
-                contentType: "application/json",
-                data: param,
-                dataType: "json",
-                cache: false,
-                success: function (result, status) {
-                    alert("주문이 완료 되었습니다.");
-                    location.href = '/orders';
-                },
-                error: function (request, status, error) {
-                    if (request.status === '401') {
-                        alert('로그인 후 이용해주세요.');
-                        location.href = '/login';
-                    } else {
-                        alert(request.responseText);
-                    }
-                },
-            });
+                $.ajax({
+                    url: "/cart/orders",
+                    type: "POST",
+                    contentType: "application/json",
+                    data: param,
+                    dataType: "json",
+                    cache: false,
+                    success: function (result, status) {
+                        alert("주문이 완료 되었습니다.");
+                        location.href = '/orders';
+                    },
+                    error: function (request, status, error) {
+                        if (request.status === '401') {
+                            alert('로그인 후 이용해주세요.');
+                            location.href = '/login';
+                        } else {
+                            alert(request.responseText);
+                        }
+                    },
+                });
+            } else {
+                return false;
+            }
         }
 
         function ordersAllItems() {
@@ -380,6 +384,10 @@
                 false;
             }
         }
+
+        $(".resume_btn").on("click", function () {
+            location.href = "/";
+        });
     </script>
 </body>
 </html>
