--- a/src/main/resources/static/css/scss/pages/admin/_itemForm.scss
+++ b/src/main/resources/static/css/scss/pages/admin/_itemForm.scss
@@ -96,6 +96,12 @@
                         padding: 3px !important;
                     }
 
+                    button.del_file {
+                        width: 70px !important;
+                        height: 26px !important;
+                        padding: 3px !important;
+                    }
+
                     textarea {
                         width: 100%;
                         height: 400px;
@@ -137,7 +143,6 @@
 
                     span.discount_text {
                         display: inline-block;
-
                     }
                 }
             }
