--- a/src/main/resources/templates/admin/item/itemMng.html
+++ b/src/main/resources/templates/admin/item/itemMng.html
@@ -170,6 +170,8 @@
                     alert("상품 정보가 수정되었습니다.");
                 } else if (result === 'update_fail') {
                     alert("상품 수정 중 오류가 발생하였습니다.");
+                } else if (result === 'required_rep_img') {
+                    alert("상품 수정 중 오류가 발생하였습니다. (첫 번째 상품 이미지 필수)")
                 }
             }
         })
