--- a/src/main/resources/static/css/css/default.css
+++ b/src/main/resources/static/css/css/default.css
@@ -1356,34 +1356,36 @@ footer .footer_copyright {
   font-size: 12px;
 }
 #items .items_body .img_box {
-  overflow: hidden;
-  position: relative;
+  margin-bottom: 7%;
 }
 #items .items_body .img_box .desc {
   padding: 10px 0;
-  width: 100%;
-  height: 100%;
   background-color: #fff;
-  opacity: 0.7;
   color: #000;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
 }
 #items .items_body .img_box .desc .name {
-  font-weight: normal;
-  line-height: 28px;
-  font-size: 14px;
-  letter-spacing: 0em;
-  color: #111111;
-  text-align: left;
+  font-size: 12px;
+  color: #222222;
 }
-#items .items_body .img_box .desc .price {
-  font-size: 14px;
-  color: #111111;
+#items .items_body .img_box .desc .discount .item_price,
+#items .items_body .img_box .desc .no_discount .item_price {
+  font-size: 12px;
+  color: #000000;
+}
+#items .items_body .img_box .desc .discount .discount_price,
+#items .items_body .img_box .desc .no_discount .discount_price {
+  font-size: 12px;
+  color: #333333;
   font-weight: bold;
 }
-#items .items_body .img_box .desc:hover .desc {
-  top: 80%;
+#items .items_body .img_box .desc .discount .discount_rate,
+#items .items_body .img_box .desc .no_discount .discount_rate {
+  font-size: 12px;
+  color: #e06f18;
+  font-weight: bold;
+}
+#items .items_body .img_box .desc .no_discount .item_price {
+  text-decoration: line-through;
 }
 #items .items_body .pagination {
   display: -webkit-box;
@@ -2228,15 +2230,12 @@ footer .footer_copyright {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 .item_dtl_body .info .item_price .title {
   display: inline-block;
-  width: 20%;
-  vertical-align: middle;
-  font-size: 11px;
+  width: 30%;
+  font-size: 12px;
+  margin: 7px 20px 7px 0;
 }
 .item_dtl_body .info .item_price .title span {
   font-size: 12px;
@@ -2245,11 +2244,46 @@ footer .footer_copyright {
 .item_dtl_body .info .item_price .con {
   display: inline-block;
   width: auto;
-  vertical-align: middle;
-  font-size: 11px;
+  font-size: 12px;
+  margin: 7px 0;
 }
 .item_dtl_body .info .item_price .con span {
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: bold;
+}
+.item_dtl_body .info .discount_price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.item_dtl_body .info .discount_price .title {
+  display: inline-block;
+  width: 30%;
+  font-size: 12px;
+  margin: 7px 20px 7px 0;
+}
+.item_dtl_body .info .discount_price .title span {
+  font-size: 12px;
+  color: #333333;
+  font-weight: bold;
+}
+.item_dtl_body .info .discount_price .con {
+  display: inline-block;
+  font-size: 12px;
+  margin: 7px 0;
+}
+.item_dtl_body .info .discount_price .con span {
+  font-size: 12px;
+  font-weight: bold;
+}
+.item_dtl_body .info .discount_price .discount_rate {
+  display: inline-block;
+  font-size: 12px;
+  margin: 7px 0 0 7px;
+}
+.item_dtl_body .info .discount_price .discount_rate span {
+  font-size: 12px;
+  color: #e06f18;
   font-weight: bold;
 }
 .item_dtl_body .info .total_box {
