--- a/src/main/resources/static/css/scss/pages/_main.scss
+++ b/src/main/resources/static/css/scss/pages/_main.scss
@@ -65,35 +65,42 @@
         }
 
         .img_box {
-            overflow: hidden;
-            position: relative;
+            margin-bottom: 7%;
 
             .desc {
                 padding: 10px 0;
-                width: 100%;
-                height: 100%;
                 background-color: #fff;
-                opacity: 0.7;
                 color: #000;
-                transition: 0.3s;
 
                 .name {
-                    font-weight: normal;
-                    line-height: 28px;
-                    font-size: 14px;
-                    letter-spacing: 0.0em;
-                    color: #111111;
-                    text-align: left;
+                    font-size: 12px;
+                    color: #222222;
                 }
 
-                .price {
-                    font-size: 14px;
-                    color: #111111;
-                    font-weight: bold;
+                .discount,
+                .no_discount {
+                    .item_price {
+                        font-size: 12px;
+                        color: #000000;
+                    }
+
+                    .discount_price {
+                        font-size: 12px;
+                        color: #333333;
+                        font-weight: bold;
+                    }
+
+                    .discount_rate {
+                        font-size: 12px;
+                        color: #e06f18;
+                        font-weight: bold;
+                    }
                 }
 
-                &:hover .desc {
-                    top: 80%;
+                .no_discount {
+                    .item_price {
+                        text-decoration: line-through;
+                    }
                 }
             }
         }
