--- a/src/main/resources/templates/admin/item/itemDtl.html
+++ b/src/main/resources/templates/admin/item/itemDtl.html
@@ -236,9 +236,12 @@
                 }
             })
 
-            /* 할인율 */
-            let discount = Number([[${discount}]]);
-            $(".discount_interface").val(discount)
+            /* 할인율 기본 값 셋팅 */
+            $(".discount_interface").val([[${itemFormDto.discount}]] * 100);
+            let price = [[${itemFormDto.price}]];
+            let discount = [[${itemFormDto.discount}]]
+            let discountPrice = price * (1 - discount);
+            $(".discount_price").html(discountPrice.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") + "원");
 
             let moveForm = $("#move_form");
             /* 상품 관리 페이지 이동 버튼 */
